Show last sync time in footer
This commit introduces a mechanism to keep track of and fetch the last
time the menu was synchronized with the server. This takes the form of a
new SyncEvent model, which is exposed via the API and also displayed in
the footer of each page.
